add postcard, start making post page
Signed-off-by: Sayan Biswas <sayan@pokurt.me>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,17 @@ a {
     background: black;
   }
 }
+
+.container {
+  height: 200px;
+  position: relative;
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
